# gamedev-engine

engine/: .gitignore  CMakeLists.txt  CompilationInstructions.txt  README.txt
engine/include/: Window.h  config.h  geassert.h
engine/include/containers/: array.h  array.hpp  fixedVector.h  fixedVector.hpp  how to fix glew.h.docx  how to fix glew.txt  vector.h  vector.hpp  vector.hpp~  vector.h~
engine/include/math/: Matrix.hpp  Quaternion.hpp  Vector.hpp  vec2.h
engine/include/rendering/: Mesh.h  Shader.h  Texture.h
engine/res/: testShader.fs  testShader.vs  texTestShader.fs  texTestShader.vs  uniformTestShader.fs
engine/src/: Makefile  Window.cpp  config.h  config.h.in  main.cpp
engine/src/containers/: array.cpp
engine/src/math/: Matrix.cpp  Quaternion.cpp  Vector.cpp  vec2.cpp
engine/src/rendering/: Mesh.cpp  Shader.cpp  Texture.cpp
engine/src/tests/Math-UnitTests/: Math-UnitTests.sln
engine/src/tests/Math-UnitTests/Math-UnitTests/: Math-UnitTests.vcxproj  Math-UnitTests.vcxproj.filters  main.cpp
engine/src/tests/Math-UnitTests/Math-UnitTests/Debug/: vc140.idb
engine/src/tests/Math-UnitTests/Math-UnitTests/Debug/Math-UnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Math-UnitTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/src/tests/Math-UnitTests/Math-UnitTests/Release/Math-UnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Math-UnitTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/src/tests/Math-UnitTests/Release/: Math-UnitTests.iobj  Math-UnitTests.ipdb
engine/src/tests/Math-UnitTests/include/gtest/: gtest.h
testing/SDLTest/: SDLTest.cbp  SDLTest.depend  SDLTest.layout  main.cpp
